# Research-Paper-Analyst-and-Literature-Review-Generation-Agent--CREW-AI

./: .gitignore  README.md  pyproject.toml
knowledge/: user_preference.txt
outputs/: evaluation.json  extracted_content.json  literature_review_final.md  paper_metadata.json  research_strategy.json  synthesis.json
src/research_analyst_literature_review_generator/: crew.py  main.py
src/research_analyst_literature_review_generator/config/: agents.yaml  tasks.yaml
src/research_analyst_literature_review_generator/tools/: __init__.py  citation_tool.py  data_analysis_tool.py  paper_download_tool.py  pdf_parser_tool.py
